--- a/src/components/VideoShowcase.css
+++ b/src/components/VideoShowcase.css
@@ -29,6 +29,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border: none;
 }
 
 .status-overlay {
